--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --public-url ./phaser-test/"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
