--- a/.github/workflows/build-deploy-github-page.js.yml
+++ b/.github/workflows/build-deploy-github-page.js.yml
@@ -22,6 +22,8 @@ jobs:
         args: install
     - name: Install Wine
       run: |
+        wget -nc https://dl.winehq.org/wine-builds/winehq.key
+        sudo apt-key add winehq.key
         sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ groovy main'
         sudo apt update
         sudo apt install --install-recommends winehq-stable
