--- a/.github/workflows/build-deploy-github-page.js.yml
+++ b/.github/workflows/build-deploy-github-page.js.yml
@@ -22,6 +22,7 @@ jobs:
         args: install
     - name: Install Wine
       run: |
+        sudo dpkg --add-architecture i386 
         wget -nc https://dl.winehq.org/wine-builds/winehq.key
         sudo apt-key add winehq.key
         sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
