--- a/.github/workflows/build-deploy-github-page.js.yml
+++ b/.github/workflows/build-deploy-github-page.js.yml
@@ -27,6 +27,8 @@ jobs:
         sudo apt-key add winehq.key
         sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
         sudo apt update
+        sudo apt install wine-stable-i386
+        sudo apt update
         sudo apt install --install-recommends wine-stable
         sudo apt update
         sudo apt install --install-recommends winehq-stable
