--- a/.github/workflows/build-deploy-github-page.js.yml
+++ b/.github/workflows/build-deploy-github-page.js.yml
@@ -20,21 +20,21 @@ jobs:
       uses: CultureHQ/actions-yarn@master
       with:
         args: install
-    - name: Install Wine
-      run: |
-        sudo dpkg --add-architecture i386 
-        wget -nc https://dl.winehq.org/wine-builds/winehq.key
-        sudo apt-key add winehq.key
-        sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
-        sudo apt update
-        sudo apt install --install-recommends libgphoto2-6:i386
-        sudo apt update
-        sudo apt install --install-recommends wine-stable-i386
-        sudo apt update
-        sudo apt install --install-recommends wine-stable
-        sudo apt update
-        sudo apt install --install-recommends winehq-stable
-        wine --version
+    # - name: Install Wine
+    #   run: |
+    #     sudo dpkg --add-architecture i386 
+    #     wget -nc https://dl.winehq.org/wine-builds/winehq.key
+    #     sudo apt-key add winehq.key
+    #     sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
+    #     sudo apt update
+    #     sudo apt install --install-recommends libgphoto2-6:i386
+    #     sudo apt update
+    #     sudo apt install --install-recommends wine-stable-i386
+    #     sudo apt update
+    #     sudo apt install --install-recommends wine-stable
+    #     sudo apt update
+    #     sudo apt install --install-recommends winehq-stable
+    #     wine --version
     - name: Build Web
       uses: CultureHQ/actions-yarn@master
       with:
